long descriptions, positions updates, font updates, support layout updates

--- a/index.html
+++ b/index.html
@@ -33,13 +33,6 @@
       <script src="js/assets/respond.js"></script>
     <![endif]-->
     <script src="js/assets/modernizr-latest.js"></script>
-    <!-- ADOBE TYPEKIT -->
-    <script src="//use.typekit.net/iku0bgp.js"></script>
-    <script>
-    try {
-        Typekit.load();
-    } catch (e) {}
-    </script>
 </head>
 
 <body class="loading container-fluid">
@@ -327,7 +320,9 @@
             <div id="positions" class="empty">
             </div>
             <div id="support-blurb">
-                <p>Little peeping Tom, why don’t you join the fun? Visit our <a href="#!/support">Support Page</a> to see how you can help stick it to cancer, hard!</p>
+                <h4>Little peeping Tom, why don’t you join the fun?</h4>
+                <p>Visit our Support Page to see how you can help stick it to cancer, <em>hard!</em></p>
+                <a class="cs-button btn hvr-bob" href="#!/support">Support the Cause</a><br><br>
                 <small>Support for The Cancer Sutra goes toward helping raise awareness, funding research, and spreading the message about how early detection can help save lives.</small>
             </div>
             <!--SUPPORT THE CAUSE CTAs-->
@@ -383,6 +378,14 @@
                 <div class="col-sm-8 store-item store-item-posters">
                     <div class="store-item-wrapper">
                         <img class="img-responsive" src="img/support/Posters_ALL_Promo_New.jpg">
+                        <div class="row store-info">
+                            <div class="col-sm-6">
+                                <span class="store-item-name">The Cancer Sutra Art Prints</span>
+                            </div>
+                            <div class="col-sm-6">
+                                <span class="store-item-cta"><br>RESERVE YOURS >></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!--<div class="col-sm-8 store-item store-item-posters">
@@ -438,9 +441,11 @@
                                 Your request has been submitted.<br>
                                 <a class="cs-button btn hvr-bob return-to-cancer-sutra" href="#!/positions">Return to Cancer Sutra</a>
                             </div>
-                <div class="col-sm-12">
-                    <p>Get your hands on one of 50 limited edition art prints before they’re gone (limit one per order). Fill in the information below to order and receive a confirmation email. Then check back in May to purchase another to help spread the word that early detection can help save lives.</p>
-                    <div class="google-form col-sm-6 col-sm-offset-3">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <h2><center>Get your hands on one of 50 limited edition art prints</center></h2>
+                    <p><center>Fill in the information below to order (limit one per person).<br>
+                        You'll recieve a confirmation email shortly after to verify your order.</center><br></p>
+                    <div class="google-form">
                         <form target="form-target" style="position:relative" method="POST" onsubmit="this.action='https://docs.google.com/forms/d/1wmJ6vAVwxDxg--X_X5A3mhRpvn7Scfls3KM9cTN9VDo/formResponse'">
                             <div class="form-entry row">
                                 <div class="col-sm-6"><label for="entry_2011705561">First Name </label></div>
@@ -508,7 +513,7 @@
                                 <a target="_blank" href><img src="img/social/icons/email.png" /></a>
                                 <a target="_blank" href="http://www.facebook.com/share.php?u=http://qa.cancersutra.com:8080/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
                                 <a target="_blank" href="http://twitter.com/share?url=http://qa.cancersutra.com:8080/positions/{{element-name}}&hashtags=CancerSutra"><img src="img/social/icons/twitter.png" /></a>
-                                <a target="_blank" href="https://tumblr.com/share/photo?source=http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}&caption={{og:description-encoded}}&click_thru=http://qa.cancersutra.com:8080/positions/{{element-name}}"><img src="img/social/icons/tumblr.png" /></a>
+                                <a target="_blank" href="http://tumblr.com/widgets/share/tool?&canonicalUrl=http://qa.cancersutra.com:8080/positions/{{element-name}}&posttype=photo&content=http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}&caption={{long-description-encoded}}&tags=EarlyCancerDetection,At-homeCancerDetection,Cancer,CancerSutra,Partner-checking,Partner-checks,KamaSutra,Positions,Love,Design"><img src="img/social/icons/tumblr.png" /></a>
                             </div>
                         </div>
                     </div>
