--- a/social/email-template.html
+++ b/social/email-template.html
@@ -1,5 +1,4 @@
 {{#position}}
-    <h1 style="font-family:sans-serif">{{display-name}}</h1>
-    <p style="font-family:sans-serif">{{og:description}}</p>
 	<img style="width:100%;height:auto" src="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+	<p style="font-family:sans-serif">{{long-description}}</p>
 {{/position}}
