mustache escape HTML for email

--- a/social/email-template.html
+++ b/social/email-template.html
@@ -1,4 +1,4 @@
 {{#position}}
 	<img style="width:100%;height:auto" src="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
-	<p style="font-family:sans-serif">{{long-description}}</p>
+	<p style="font-family:sans-serif">{{{long-description}}}</p>
 {{/position}}
