updates per final feedback email

--- a/email/index.html
+++ b/email/index.html
@@ -51,7 +51,7 @@
        {{#position}}
             <img style="width:100%;height:auto;padding:20px" src="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
             <br>
-            <p style="font-family:sans-serif;font-size:10px">{{{long-description}}}</p>
+            <p style="font-family:'ProximaNova-Light',sans-serif;font-size:10px">{{{long-description}}}</p>
         {{/position}}
     </script>
     <!-- jQuery 2 For Modern Browsers -->
