--- a/index.html
+++ b/index.html
@@ -423,14 +423,14 @@
                     <div class="ebook-detail-sticky">
                         <h2>The Cancer Sutra eBook</h2>
                         <h3>$9.99</h3>
-                        <p>Donate now and get all 31 positions featured online, plus 1 bonus position, on your reading device of choice (supported on Kindle, iBooks®, and NOOK®).</p>
-                        <a href="https://itunes.apple.com/us/book/the-cancer-sutra/id989329278?mt=11"><img src="img/support/ibooks-button.png" /></a>
+                        <p>Donate now and get all 31 positions featured online, plus 1 bonus position, on your reading device of choice (supported on Kindle and iBooks®).</p>
+                        <a target="_blank" href="https://itunes.apple.com/us/book/the-cancer-sutra/id989329278?mt=11"><img src="img/support/ibooks-button.png" /></a>
                         <br>
                         <br>
-                        <a href="http://www.amazon.com/Cancer-Sutra-ebook/dp/B00WNY34XQ/ref=sr_1_1?ie=UTF8&qid=1430141167&sr=8-1&keywords=the+cancer+sutra+kindle"><img src="img/support/kindle-button.png" /></a>
+                        <a target="_blank" href="http://www.amazon.com/Cancer-Sutra-ebook/dp/B00WNY34XQ/ref=sr_1_1?ie=UTF8&qid=1430141167&sr=8-1&keywords=the+cancer+sutra+kindle"><img src="img/support/kindle-button.png" /></a>
+                        <!--<br>
                         <br>
-                        <br>
-                        <a href><img src="img/support/nook-button.png" /></a>
+                        <a href><img src="img/support/nook-button.png" /></a>-->
                     </div>
                 </div>
             </div>
@@ -458,11 +458,13 @@
                                 <div class="col-sm-6"><input name="entry.272007339" value="" id="entry_272007339" type="text"></div> </div>
                             <div class="form-entry row">
                                 <div class="col-sm-6"><label for="entry_74133310">Email </label></div>
-                                <div class="col-sm-6"><input name="entry.74133310" value="" id="entry_74133310" type="text"></div> </div>
+                                <div class="col-sm-6"><input name="entry.74133310" value="" id="entry_74133310" type="text">
+                                    <input style="width:100%" class="cs-button col-sm-6 col-sm-offset-6 btn hvr-bob" value="Submit" type="submit"></div> 
+
+                            </div>
                             <input name="draftResponse" value="[,,&quot;-6369652635049869821&quot;] " type="hidden">
                             <input name="pageHistory" value="0" type="hidden">
                             <input name="fbzx" value="-6369652635049869821" type="hidden">
-                            <input class="cs-button col-sm-6 col-sm-offset-6 btn hvr-bob" value="Submit" type="submit">
                             <iframe id="form-target" name="form-target" style="width:0px; height:0px; border:0px;"></iframe>
                         </form>
                     </div>
