--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta property="og:title" content="The Cancer Sutra" />
-    <meta property="og:url" content="http://qa.cancersutra.com:8080" />
+    <meta property="og:url" content="http://cancersutra.com" />
     <meta property="og:site_name" content="The Cancer Sutra" />
     <meta property="og:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?" />
-    <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png" />
+    <meta property="og:image" content="http://cancersutra.com/img/social/banners/CS_Social_General.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="The Cancer Sutra" />
-    <meta name="twitter:url" content="http://qa.cancersutra.com:8080" />
+    <meta name="twitter:url" content="http://cancersutra.com" />
     <meta name="twitter:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?" />
-    <meta name="twitter:image:src" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png" />
+    <meta name="twitter:image:src" content="http://cancersutra.com/img/social/banners/CS_Social_General.png" />
     <meta name="twitter:site" content="@CancerSutra" />
     <meta name="twitter:creator" content="@CancerSutra" />
     <link rel="shortcut icon" href="favicon.ico">
@@ -512,10 +512,10 @@
                                     <br>*{{{just-the-tip}}}</p>
                             </div>
                             <div class="detail-social">
-                                <a target="_blank" href="http://qa.cancersutra.com:8080/email/#{{element-name}}"><img src="img/social/icons/email.png" /></a>
-                                <a target="_blank" href="http://www.facebook.com/share.php?u=http://qa.cancersutra.com:8080/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
-                                <a target="_blank" href="http://twitter.com/share?url=http://qa.cancersutra.com:8080/positions/{{element-name}}&hashtags=CancerSutra"><img src="img/social/icons/twitter.png" /></a>
-                                <a target="_blank" href="http://tumblr.com/widgets/share/tool?&canonicalUrl=http://qa.cancersutra.com:8080/positions/{{element-name}}&posttype=photo&content=http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}&caption={{long-description-encoded}}&tags=EarlyCancerDetection,At-homeCancerDetection,Cancer,CancerSutra,Partner-checking,Partner-checks,KamaSutra,Positions,Love,Design"><img src="img/social/icons/tumblr.png" /></a>
+                                <a target="_blank" href="http://cancersutra.com/email/#{{element-name}}"><img src="img/social/icons/email.png" /></a>
+                                <a target="_blank" href="http://www.facebook.com/share.php?u=http://cancersutra.com/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
+                                <a target="_blank" href="http://twitter.com/share?url={{bitly}}&text={{og:description}}"><img src="img/social/icons/twitter.png" /></a>
+                                <a target="_blank" href="http://tumblr.com/widgets/share/tool?&canonicalUrl=http://cancersutra.com/positions/{{element-name}}&posttype=photo&content=http://cancersutra.com/img/social/banners/{{banner-name}}&caption={{long-description-encoded}}&tags=EarlyCancerDetection,At-homeCancerDetection,Cancer,CancerSutra,Partner-checking,Partner-checks,KamaSutra,Positions,Love,Design"><img src="img/social/icons/tumblr.png" /></a>
                             </div>
                         </div>
                     </div>
@@ -549,6 +549,17 @@
     <script src="js/assets.js"></script>
     <script src="js/about.js"></script>
     <script src="js/app.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62353955-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
