--- a/social/template.html
+++ b/social/template.html
@@ -8,16 +8,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="canonical" href="http://qa.cancersutra.com:8080/positions/{{element-name}}" />
+    <link rel="canonical" href="http://cancersutra.com/positions/{{element-name}}" />
 
     <meta property="og:title" content="{{display-name}} | The Cancer Sutra"/>
-    <meta property="og:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
+    <meta property="og:url" content="http://cancersutra.com/positions/{{element-name}}"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
     <meta property="og:description" content="{{og:description}}"/>
     <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
 
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
+    <meta name="twitter:url" content="http://cancersutra.com/positions/{{element-name}}"/>
     <meta name="twitter:title" content="{{display-name}} | The Cancer Sutra"/>
     <meta name="twitter:description" content="{{og:description}}"/>
     <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
