--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                             <div class="detail-social">
                                 <a target="_blank" href="http://cancersutra.com/email/#{{element-name}}"><img src="img/social/icons/email.png" /></a>
                                 <a target="_blank" href="http://www.facebook.com/share.php?u=http://cancersutra.com/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
-                                <a target="_blank" href="http://twitter.com/share?url={{bitly}}&text={{og:description-encoded}}"><img src="img/social/icons/twitter.png" /></a>
+                                <a target="_blank" href="http://twitter.com/share?url={{bitly}}&text={{og:description-encoded}}&hashtags=CancerSutra"><img src="img/social/icons/twitter.png" /></a>
                                 <a target="_blank" href="http://tumblr.com/widgets/share/tool?&canonicalUrl=http://cancersutra.com/positions/{{element-name}}&posttype=photo&content=http://cancersutra.com/img/social/banners/{{banner-name}}&caption={{long-description-encoded}}&tags=EarlyCancerDetection,At-homeCancerDetection,Cancer,CancerSutra,Partner-checking,Partner-checks,KamaSutra,Positions,Love,Design"><img src="img/social/icons/tumblr.png" /></a>
                             </div>
                         </div>
