--- a/index.html
+++ b/index.html
@@ -533,18 +533,18 @@
     <!--[if lte IE 9]>
         <script src="js/assets/jquery-1.11.2.min.js"></script>
     <![endif]-->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!--<script src="bootstrap/js/bootstrap.min.js"></script>-->
     <script src="js/assets/imagesloaded.pkgd.min.js"></script>
     <script src="js/assets/toe.min.js"></script>
     <script src="js/assets/underscore-min.js"></script>
-    <script src="js/assets/jquery.mousewheel.min.js"></script>
-    <script src="js/assets/mousetrap.min.js"></script>
+    <!--<script src="js/assets/jquery.mousewheel.min.js"></script>-->
+    <!--<script src="js/assets/mousetrap.min.js"></script>-->
     <script src="js/assets/jquery.onscreen.min.js"></script>
     <script src="js/assets/easing-min.js"></script>
     <script src="js/assets/snap.svg-min.js"></script>
-    <script src="js/assets/isotope.pkgd.min.js"></script>
+    <!--<script src="js/assets/isotope.pkgd.min.js"></script>-->
     <script src="js/assets/mustache.min.js"></script>
-    <script src="js/assets/wow.min.js"></script>
+    <!--<script src="js/assets/wow.min.js"></script>-->
     <script src="data/positions.js"></script>
     <script src="js/assets.js"></script>
     <script src="js/about.js"></script>
