--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="The Cancer Sutra" />
     <meta property="og:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?" />
     <meta property="og:image" content="http://cancersutra.com/img/social/banners/CS_Social_General.png" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="The Cancer Sutra" />
     <meta name="twitter:url" content="http://cancersutra.com" />
     <meta name="twitter:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?" />
