--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>The Cancer Sutra</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="author" href="humans.txt" />
     <meta property="og:title" content="The Cancer Sutra" />
     <meta property="og:url" content="http://cancersutra.com" />
     <meta property="og:site_name" content="The Cancer Sutra" />
