--- a/index.html
+++ b/index.html
@@ -527,11 +527,11 @@
     <script src="js/assets/routie.min.js"></script>
     <!-- jQuery 2 For Modern Browsers -->
     <!--[if !IE]><!-->
-    <script src="js/assets/jquery-2.1.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--<![endif]-->
     <!-- jQuery 1 for IE9 and Earlier -->
     <!--[if lte IE 9]>
-        <script src="js/assets/jquery-1.11.2.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <![endif]-->
     <!--<script src="bootstrap/js/bootstrap.min.js"></script>-->
     <script src="js/assets/imagesloaded.pkgd.min.js"></script>
