--- a/index.html
+++ b/index.html
@@ -18,16 +18,8 @@
     <meta name="twitter:site" content="@CancerSutra" />
     <meta name="twitter:creator" content="@CancerSutra" />
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/assets/animate.css">
-    </style>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    </style>
-    <link rel="stylesheet" href="fonts/keplerstd/keplerstd.css">
-    </style>
-    <link rel="stylesheet" href="css/app.css">
-    </style>
-    <link rel="stylesheet" href="css/mq.css">
-    </style>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/app.min.css"/>
     <!--[if lt IE 9]>
       <script src="js/assets/html5shiv.js"></script>
       <script src="js/assets/respond.js"></script>
@@ -524,7 +516,6 @@
             {{/positions}}
         </script>
     </div>
-    <script src="js/assets/routie.min.js"></script>
     <!-- jQuery 2 For Modern Browsers -->
     <!--[if !IE]><!-->
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -533,22 +524,19 @@
     <!--[if lte IE 9]>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <!--<script src="bootstrap/js/bootstrap.min.js"></script>-->
+    <!--<script src="js/assets/routie.min.js"></script>
     <script src="js/assets/imagesloaded.pkgd.min.js"></script>
     <script src="js/assets/toe.min.js"></script>
-    <script src="js/assets/underscore-min.js"></script>
-    <!--<script src="js/assets/jquery.mousewheel.min.js"></script>-->
-    <!--<script src="js/assets/mousetrap.min.js"></script>-->
     <script src="js/assets/jquery.onscreen.min.js"></script>
     <script src="js/assets/easing-min.js"></script>
     <script src="js/assets/snap.svg-min.js"></script>
-    <!--<script src="js/assets/isotope.pkgd.min.js"></script>-->
     <script src="js/assets/mustache.min.js"></script>
-    <!--<script src="js/assets/wow.min.js"></script>-->
-    <script src="data/positions.js"></script>
+    <script src="data/positions.js"></script>-->
+    
     <script src="js/assets.js"></script>
-    <script src="js/about.js"></script>
-    <script src="js/app.js"></script>
+    <!--<script src="js/app.js"></script>-->
+
+    <script src="js/app.min.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
