--- a/social/template.html
+++ b/social/template.html
@@ -14,13 +14,13 @@
     <meta property="og:url" content="http://cancersutra.com/positions/{{element-name}}"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
     <meta property="og:description" content="{{og:description}}"/>
-    <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+    <meta property="og:image" content="http://cancersutra.com/img/social/banners/{{banner-name}}"/>
 
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:url" content="http://cancersutra.com/positions/{{element-name}}"/>
     <meta name="twitter:title" content="{{display-name}} | The Cancer Sutra"/>
     <meta name="twitter:description" content="{{og:description}}"/>
-    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+    <meta name="twitter:image" content="http://cancersutra.com/img/social/banners/{{banner-name}}"/>
     <meta name="twitter:site" content="@CancerSutra"/>
     <meta name="twitter:creator" content="@CancerSutra"/>
 
@@ -29,7 +29,7 @@
     <h1>The Cancer Sutra</h1>
 	<h1>{{display-name}}</h1>
     <p>{{og:description}}</p>
-	<img style="width:100%;height:auto" src="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+	<img style="width:100%;height:auto" src="http://cancersutra.com/img/social/banners/{{banner-name}}"/>
 </body>
 </html>
 {{/position}}
