production images for email

--- a/email/index.html
+++ b/email/index.html
@@ -49,7 +49,7 @@
     <div style="width:0;height:0;" id="form-target"></div>
     <script id="preview-template" type="text/template">
        {{#position}}
-            <img style="width:100%;height:auto;padding:20px" src="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+            <img style="width:100%;height:auto;padding:20px" src="http://cancersutra.com/img/social/banners/{{banner-name}}"/>
             <br>
             <p style="font-family:'ProximaNova-Light',sans-serif;font-size:11px">{{{long-description}}}</p>
         {{/position}}
