posters for sale! updated support page and forwarded to stupidcancerstore.org

--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
                             <div class="col-sm-12">
                                 <span class="store-item-name">The Cancer Sutra eBook</span>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <span class="store-item-price">$9.99</span>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <span class="store-item-cta">BUY</span>
                             </div>
                         </div>
@@ -372,11 +372,14 @@
                     <div class="store-item-wrapper">
                         <img class="img-responsive" src="img/support/Posters_ALL_Promo_New.jpg">
                         <div class="row store-info">
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <span class="store-item-name">The Cancer Sutra Art Prints</span>
                             </div>
-                            <div class="col-sm-6">
-                                <span class="store-item-cta"><br>RESERVE YOURS >></span>
+                            <div class="col-sm-12">
+                                <span class="store-item-price">$25-$125</span>
+                            </div>
+                            <div class="col-sm-12">
+                                <span class="store-item-cta">Available at StupidCancer.org &gt;&gt;</span>
                             </div>
                         </div>
                     </div>
