posters for sale: new image

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div class="col-sm-8 store-item store-item-posters">
                     <div class="store-item-wrapper">
-                        <img class="img-responsive" src="img/support/Posters_ALL_Promo_New.jpg">
+                        <img class="img-responsive" src="img/support/Posters_ALL.jpg">
                         <div class="row store-info">
                             <div class="col-sm-12">
                                 <span class="store-item-name">The Cancer Sutra Art Prints</span>
