--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     <!--<![endif]-->
     <!-- jQuery 1 for IE9 and Earlier -->
     <!--[if lte IE 9]>
-        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <![endif]-->
     <!--<script src="js/assets/routie.min.js"></script>
     <script src="js/assets/imagesloaded.pkgd.min.js"></script>
