protocol fix for GitHub Pages 2

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     </div>
     <!-- jQuery 2 For Modern Browsers -->
     <!--[if !IE]><!-->
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--<![endif]-->
     <!-- jQuery 1 for IE9 and Earlier -->
     <!--[if lte IE 9]>
